--- a/Octocat-master/collaborate.html
+++ b/Octocat-master/collaborate.html
@@ -41,7 +41,7 @@
 <div class="container marketing">
 
     <div class="jumbotron">
-        <h1>Collaborate</h1>
+        <h1>Hi Oyku</h1>
         <p class="lead">In this exercise you're going to collaborate with a partner using GitHub. You'll both
         work on the same project and see what happens if your changes conflict</p>
     </div>
